--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,12 @@
             </intent-filter>
         </activity>
 
+        <service android:name=".UIController.FloatingViewService"
+                 android:permission="android.permission.SYSTEM_ALERT_WINDOW"
+                 android:exported="false"/>
+
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
 </manifest>
